# homebot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  tasks.py
.github/workflows/: docker-image.yml
